objects/SalesPipeline__c.object
<CustomObject>
    <fields>
        <fullName>JuchuYoteiTsukin__c</fullName>
        <formula>if (isblank(JuchuYoteiTsuki__c ) ,null, 
Datevalue(LEFT(JuchuYoteiTsuki__c , 4) &amp; &quot;-&quot; &amp; MID(JuchuYoteiTsuki__c , 5, 2) &amp; &quot;-&quot; &amp; &quot;01&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>受注予定月_YYYYMMDD</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>JuchuYoteiTsukin_del__c</fullName>
        <formula>if (isblank(JuchuYoteiTsuki__c ) ,null, 
Datevalue(LEFT(JuchuYoteiTsuki__c , 4) &amp; &quot;-&quot; &amp; MID(JuchuYoteiTsuki__c , 5, 2) &amp; &quot;-&quot; &amp; &quot;01&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>[受注予定月(数式)]</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>KYT_NM__c</fullName>
        <label>顧客担当氏名</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KY_SIYOU_BSHO__c</fullName>
        <label>顧客担当部署</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KakkoKubun__c</fullName>
        <label>カッコ区分</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>KigyoTaniPicklist__c</fullName>
        <label>企業単位</label>
        <picklist>
            <picklistValues>
                <fullName>J</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Y</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>KigyoTani__c</fullName>
        <label>[企業単位]</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Kokunai_Kaigai__c</fullName>
        <label>国内/海外</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>KyakusakiKubun__c</fullName>
        <label>客先区分</label>
        <picklist>
            <picklistValues>
                <fullName>A01</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A02</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A03</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A04</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B01</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B02</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B03</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C01</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C02</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C03</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C04</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C05</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C06</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C07</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C08</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C09</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C22</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D01</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LastQuotationNumber__c</fullName>
        <label>[その他]最終見積書番号</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeadSource__c</fullName>
        <label>[その他]商談のきっかけ</label>
        <picklist>
            <picklistValues>
                <fullName>電話での問い合わせ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Webからの問い合わせ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>展示会での問い合わせ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>営業の直接訪問から</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>商社経由</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JEOL経由</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>その他</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LeaseParticipation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>[その他]リース関与</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LeasePeriod__c</fullName>
        <label>[その他]リース期間</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LinkageStatus__c</fullName>
        <label>連携ステータス</label>
        <picklist>
            <picklistValues>
                <fullName>未連携</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>連携済</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LiquidFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>[その他]液うち</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MainPurposeLiquid__c</fullName>
        <label>[その他]主な用途(液体)</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MainPurposeSolid__c</fullName>
        <label>[その他]主な用途(固体)</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MainPurpose__c</fullName>
        <label>[その他]主な用途</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MakerInquiry__c</fullName>
        <label>[その他]メーカ名</label>
        <picklist>
            <picklistValues>
                <fullName>Bruker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agilent(Varian)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>その他</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Maker__c</fullName>
        <inlineHelpText>ERPに登録後Salesforceに新規追加
※競合装置情報：メーカー名も追加</inlineHelpText>
        <label>競合・決定メーカー名</label>
        <picklist>
            <picklistValues>
                <fullName>048</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>001</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>002</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>003</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>004</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>005</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>006</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>007</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>008</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>009</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>010</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>011</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>017</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>018</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>019</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>020</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>021</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>022</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>023</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>024</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>025</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>026</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>027</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>028</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>029</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ModelType__c</fullName>
        <formula>Shohin__r.ModelType__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>形式</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NameEdit__c</fullName>
        <formula>case (
left (text (PipelineType__c) ,1)
,&quot;A&quot;,Name
,&quot;B&quot;,Name
,&quot;C&quot;,Name
,&quot;D&quot;,Name
,&quot;E&quot;,Name
,text(PipelineType__c) &amp;  PLNO__c 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>[商談名(数式)]</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NameNo__c</fullName>
        <displayFormat>{00000000}</displayFormat>
        <label>商談№</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>NameText__c</fullName>
        <inlineHelpText>数式でパイプライン種類＋商談名としている。
一覧ビューでは商談名のみ表示される・・・
※Copy時にUpdateできない・・・トリガ要調査</inlineHelpText>
        <label>[商談名（テキスト）]</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NegociationSituation__c</fullName>
        <label>[その他]商談概況</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>NegotiationPhase__c</fullName>
        <label>[その他]商談フェーズ</label>
        <picklist>
            <picklistValues>
                <fullName>初期引き合い</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>次年度以降</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>商談中</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>商談中（貸与中）</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>入札準備中</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>入札結果待ち</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>現地受注（海外）</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>見込受注(8番）</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>仮受注</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>受注</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>検収済み</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>商談流れ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>負け</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>取り消し</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>案件ペンディング</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NewOrReuse__c</fullName>
        <label>[その他]新品/リユース選択</label>
        <picklist>
            <picklistValues>
                <fullName>新品</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>リユース</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NewUpdated__c</fullName>
        <label>新規・更新区分</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>OldEnvironmentSFID__c</fullName>
        <externalId>true</externalId>
        <label>[その他]旧環境SFID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderSituation__c</fullName>
        <label>[その他]受注状況-備考</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OtherEquipmentComment__c</fullName>
        <label>[その他]その他、既納装置に対するコメント</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Others__c</fullName>
        <inlineHelpText>Asia</inlineHelpText>
        <label>Others</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PLNO__c</fullName>
        <displayFormat>{00000000}</displayFormat>
        <label>[PLNO]</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>PipelineType__c</fullName>
        <label>パイプライン種類</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Pole_Piece__c</fullName>
        <inlineHelpText>Asia</inlineHelpText>
        <label>Pole Piece</label>
        <picklist>
            <controllingField>SeriesPicklist__c</controllingField>
            <picklistValues>
                <fullName>UHR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FHO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WGP</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Quotation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>見積書情報</label>
        <referenceTo>QuotationInformation__c</referenceTo>
        <relationshipName>QuotationLkup</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ReceiveMonthGroupTop__c</fullName>
        <label>受注月(グループ長)</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReceiveMonthHonbuDate__c</fullName>
        <description>受注月(本部)日付型</description>
        <label>[受注月(本部)_日付]</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ReceiveMonthHonbuE__c</fullName>
        <formula>if (isblank(ReceiveMonthHonbu__c ) ,null, 
Datevalue(LEFT(ReceiveMonthHonbu__c , 4) &amp; &quot;-&quot; &amp; MID(ReceiveMonthHonbu__c , 5, 2) &amp; &quot;-&quot; &amp; &quot;01&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>受注月(本部)_YYYYMMDD</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ReceiveMonthHonbu__c</fullName>
        <label>受注月(本部)</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RegionNamePicklist__c</fullName>
        <label>地域</label>
        <picklist>
            <picklistValues>
                <fullName>010</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>011</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>017</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>018</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>019</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>111</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>114</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>118</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>121</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>124</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>172</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>173</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>179</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>211</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>212</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>224</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>227</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>228</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>177</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0Z1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6Z1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>020</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>021</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RegionName__c</fullName>
        <label>[地域]</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesOrderLkup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>販売オーダ</label>
        <referenceTo>SalesOrder__c</referenceTo>
        <relationshipName>SalesPL_SalesOrder_LKUP</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SalesOrder__c</fullName>
        <externalId>true</externalId>
        <label>[販売オーダー]</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SegmentName__c</fullName>
        <label>セグメント名</label>
        <picklist>
            <picklistValues>
                <fullName>S</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Selection_path__c</fullName>
        <label>[その他]装置導入区分</label>
        <picklist>
            <picklistValues>
                <fullName>① J-J</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>② J-B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>③ J-A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>④ B-B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>⑤ B-J</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>⑥ B-A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>⑦ A-A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>⑧ A-J</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>⑨ A-B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>⑩ 新規J</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>⑪ 新規B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>⑫ 新規A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SeriesPicklist__c</fullName>
        <label>系列</label>
        <picklist>
            <picklistValues>
                <fullName>EM</fullName>
                <color>#0B6FCE</color>
            </picklistValues>
            <picklistValues>
                <fullName>XM</fullName>
                <color>#78C953</color>
            </picklistValues>
            <picklistValues>
                <fullName>AP</fullName>
                <color>#E27001</color>
            </picklistValues>
            <picklistValues>
                <fullName>XP</fullName>
                <color>#A845DC</color>
            </picklistValues>
            <picklistValues>
                <fullName>EG</fullName>
                <color>#F3D904</color>
            </picklistValues>
            <picklistValues>
                <fullName>EQ</fullName>
                <color>#A53711</color>
            </picklistValues>
            <picklistValues>
                <fullName>GC</fullName>
                <color>#66E9BD</color>
            </picklistValues>
            <picklistValues>
                <fullName>EH</fullName>
                <color>#0B24BE</color>
            </picklistValues>
            <picklistValues>
                <fullName>JX</fullName>
                <color>#419249</color>
            </picklistValues>
            <picklistValues>
                <fullName>NM</fullName>
                <color>#FFFF66</color>
            </picklistValues>
            <picklistValues>
                <fullName>ER</fullName>
                <color>#641CCF</color>
            </picklistValues>
            <picklistValues>
                <fullName>ET</fullName>
                <color>#F96FB7</color>
            </picklistValues>
            <picklistValues>
                <fullName>ML</fullName>
                <color>#2F5D85</color>
            </picklistValues>
            <picklistValues>
                <fullName>CI</fullName>
                <color>#AFCADF</color>
            </picklistValues>
            <picklistValues>
                <fullName>AS</fullName>
                <color>#8F6429</color>
            </picklistValues>
            <picklistValues>
                <fullName>PZ</fullName>
                <color>#EFAE73</color>
            </picklistValues>
            <picklistValues>
                <fullName>SP</fullName>
                <color>#57F17C</color>
            </picklistValues>
            <picklistValues>
                <fullName>MS</fullName>
                <color>#9999FF</color>
            </picklistValues>
            <picklistValues>
                <fullName>IR</fullName>
                <color>#78C953</color>
            </picklistValues>
            <picklistValues>
                <fullName>EB</fullName>
                <color>#E27001</color>
            </picklistValues>
            <picklistValues>
                <fullName>SB</fullName>
                <color>#A845DC</color>
            </picklistValues>
            <picklistValues>
                <fullName>5P</fullName>
                <color>#F3D904</color>
            </picklistValues>
            <picklistValues>
                <fullName>VT</fullName>
                <color>#A53711</color>
            </picklistValues>
            <picklistValues>
                <fullName>SH</fullName>
                <color>#66E9BD</color>
            </picklistValues>
            <picklistValues>
                <fullName>HF</fullName>
                <color>#0B24BE</color>
            </picklistValues>
            <picklistValues>
                <fullName>BS</fullName>
                <color>#419249</color>
            </picklistValues>
            <picklistValues>
                <fullName>RF</fullName>
                <color>#B6E32E</color>
            </picklistValues>
            <picklistValues>
                <fullName>TP</fullName>
                <color>#641CCF</color>
            </picklistValues>
            <picklistValues>
                <fullName>4P</fullName>
                <color>#F96FB7</color>
            </picklistValues>
            <picklistValues>
                <fullName>CA</fullName>
                <color>#2F5D85</color>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Series__c</fullName>
        <label>[系列]</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_order__c</fullName>
        <label>[その他]マルフ予定金額（ERP)</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ShippingScheduledDate__c</fullName>
        <label>[その他]出荷予定日（営業要求）</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ShitenchoShonin__c</fullName>
        <defaultValue>true</defaultValue>
        <label>支店長承認</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ShodanNo_link__c</fullName>
        <formula>HYPERLINK( ShodanNo_sync__c, &apos;&apos;) + HYPERLINK( &apos;./&apos; + Id , ShodanNo_sync__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>[商談名]</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShodanNo_sync__c</fullName>
        <externalId>true</externalId>
        <label>商談名(商談№)</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShodanSituation__c</fullName>
        <label>商談状況</label>
        <picklist>
            <picklistValues>
                <fullName>0:問合せ・展示会</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:商談中 初期アプローチ(PR段階)</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>1:商談中 提案</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:商談中 商談</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:商談中 提案見積</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:商談中 技術面談</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:商談中 来社デモ・依頼サンプル</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:商談中 予算申請</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:商談中 予算確定</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:商談中 最終見積</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:商談中 資材折衝</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:受注</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3:失注</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4:中断(予算流れ・削減)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5:その他 アフターフォロー</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5:その他 トラブル対応</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5:その他 その他</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ShodanStatus__c</fullName>
        <label>商談ステータス</label>
        <picklist>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>40</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>98</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>99</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ShohinCode__c</fullName>
        <formula>Shohin__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>商品コード</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShohinNameFormula__c</fullName>
        <formula>IF ( Shohin__c == null, ShohinNameInput__c ,ModelType__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>[商品名]</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShohinNameInput__c</fullName>
        <label>商品名（テキスト）</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShohinName__c</fullName>
        <formula>Shohin__r.JapaneseName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>[商品名]</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shohin__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>商品</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>ProductItem__c.Name</field>
                <operation>startsWith</operation>
                <value>0,1,2,3,4,5,6,7,8,9</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ProductItem__c</referenceTo>
        <relationshipLabel>営業パイプライン</relationshipLabel>
        <relationshipName>Shohin</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>